@@ -15,7 +15,6 @@ import org.objectweb.asm.commons.JSRInlinerAdapter;
 
 import java.lang.reflect.Modifier;
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 class ClassTaintingVisitor extends ClassVisitor {
@@ -113,7 +112,9 @@ class ClassTaintingVisitor extends ClassVisitor {
         // Is this class/interface an annotation or annotation proxy class? If yes, don't instrument it
         // Cf Java Language Specification 12 - 9.6.1 Annotation Types
         if (AnnotationLookup.getInstance().isAnnotation(name, superName, interfaces, this.resolver)) {
-            logger.info("{} is annotation or annotation proxy!", name);
+            if(LogUtils.LOGGING_ENABLED) {
+                logger.info("{} is annotation or annotation proxy!", name);
+            }
             this.isAnnotation = true;
             AnnotationLookup.getInstance().addAnnotation(name);
         }
@@ -168,6 +169,11 @@ class ClassTaintingVisitor extends ClassVisitor {
         return this.instrumentationHelper.instrumentFieldInstruction(this.visitor, access, name, descriptor, signature, value, (n, d, v) -> this.staticFinalFields.add(FieldData.of(n, d, v))).orElse(null);
     }
 
+    @Override
+    public RecordComponentVisitor visitRecordComponent(String name, String descriptor, String signature) {
+        String desc = this.instrumentationHelper.instrument(descriptor);
+        return super.visitRecordComponent(name, desc, signature);
+    }
 
     @Override
     public MethodVisitor visitMethod(
@@ -197,7 +203,10 @@ class ClassTaintingVisitor extends ClassVisitor {
         int instrumentedAccess = access & ~Modifier.FINAL;
 
         if (this.recording == null && MethodUtils.isClInit(access, name, desc) && !this.inEnd) {
-            logger.info("Recording static initializer");
+            if(LogUtils.LOGGING_ENABLED) {
+                logger.info("Recording static initializer for: {}", this.owner);
+            }
+
             RecordingMethodVisitor rmv = new RecordingMethodVisitor();
             this.recording = rmv.getRecording();
             this.hasClInit = true;
@@ -205,10 +214,16 @@ class ClassTaintingVisitor extends ClassVisitor {
         }
         // Create a new main method, wrapping the regular one and translating all Strings to IASStrings
         if (MethodUtils.isMain(access, name, descriptor) && !this.config.isClassMainBlacklisted(this.owner)) {
-            logger.info("Creating proxy main method");
+            if(LogUtils.LOGGING_ENABLED) {
+                logger.info("Creating proxy main method in: {}", this.owner);
+            }
+
             MethodVisitor v = super.visitMethod(Opcodes.ACC_PUBLIC | Opcodes.ACC_STATIC, Constants.Main, Constants.MAIN_METHOD_DESC, null, exceptions);
             this.createMainWrapperMethod(v);
-            logger.info("Processing renamed main method.");
+            if(LogUtils.LOGGING_ENABLED) {
+                logger.info("Processing renamed main method in {}", this.owner);
+            }
+
             mv = super.visitMethod(access, Constants.MainWrapper, this.newMainDescriptor, signature, exceptions);
             newName = Constants.MainWrapper;
             desc = this.newMainDescriptor;
@@ -226,7 +241,7 @@ class ClassTaintingVisitor extends ClassVisitor {
             mv = super.visitMethod(access, name, descriptor, signature, exceptions);
         } else if (this.instrumentedMethods.contains(new org.objectweb.asm.commons.Method(name, this.instrumentationHelper.instrumentForNormalCall(descriptor)))) {
             if (this.instrumentationHelper.instrumentForNormalCall(descriptor).equals(descriptor)) {
-                // If a not instrumented method has been instrumented and afterwards the same method with a instrumented descriptor occurs, it has to be ignored
+                // If a not instrumented method has been instrumented and afterward the same method with an instrumented descriptor occurs, it has to be ignored
                 return null;
             }
             int newAccess = instrumentedAccess & ~Opcodes.ACC_ABSTRACT;
@@ -238,8 +253,8 @@ class ClassTaintingVisitor extends ClassVisitor {
             return null;
         } else {
             desc = this.instrumentationHelper.instrumentForNormalCall(descriptor);
-            if (!desc.equals(descriptor)) {
-                logger.info("Rewriting method signature {}{} to {}{}", name, descriptor, name, desc);
+            if (LogUtils.LOGGING_ENABLED && !desc.equals(descriptor)) {
+                logger.info("Rewriting method signature {}.{}{} to {}{}", this.owner, name, descriptor, name, desc);
             }
             this.instrumentedMethods.add(new org.objectweb.asm.commons.Method(name, desc));
             mv = super.visitMethod(instrumentedAccess, name, desc, instrumentedSignature, exceptions);
@@ -267,16 +282,19 @@ class ClassTaintingVisitor extends ClassVisitor {
         // TODO Handle lists
         int register = 0;
 
-        if (!lambdaCall.isPresent() || (!lambdaCall.get().isStaticCall() && !lambdaCall.get().isConstructorCall())) {
+        if (lambdaCall.isEmpty() || (!lambdaCall.get().isStaticCall() && !lambdaCall.get().isConstructorCall())) {
             mv.visitVarInsn(Opcodes.ALOAD, 0);
             register++;
         }
 
         int diff = originalDescriptor.parameterCount() - instrumentedDescriptor.parameterCount();
+        String[] originalParameters = originalDescriptor.getParameters();
+        String[] instrumentedParameters = instrumentedDescriptor.getParameters();
+
         for (int i = 0; i < instrumentedDescriptor.parameterCount(); i++) {
-            String param = originalDescriptor.getParameters().get(i + diff);
+            String param = originalParameters[i + diff];
             mv.visitVarInsn(loadCodeByType(param), register);
-            if (this.isDescriptorNameToInstrument(param) && !param.equals(instrumentedDescriptor.getParameters().get(i))) {
+            if (this.isDescriptorNameToInstrument(param) && !param.equals(instrumentedParameters[i])) {
                 Type instrumentedType = Type.getType(this.instrumentationHelper.instrumentQN(param));
                 Type source = Type.getType(param);
                 TaintingUtils.convertTypeToTainted(source, instrumentedType, mv);
@@ -345,7 +363,9 @@ class ClassTaintingVisitor extends ClassVisitor {
      * @param mv The MethodVisitor for the static initialization block. Should be a Taint-aware MethodVisitor!
      */
     private void createStaticStringInitializer(MethodVisitor mv) {
-        logger.info("Creating a static initializer to initialize all static final String fields");
+        if(LogUtils.LOGGING_ENABLED) {
+            logger.info("Creating a static initializer to initialize all static final String fields");
+        }
         mv.visitCode();
         Utils.writeToStaticInitializer(mv, this.owner, this.staticFinalFields);
         mv.visitInsn(Opcodes.RETURN);
@@ -356,20 +376,31 @@ class ClassTaintingVisitor extends ClassVisitor {
     @Override
     public void visitEnd() {
         this.inEnd = true;
+        CompatHelper.getInstance().createCompatProxies(this.owner, super::visitMethod);
         if (!this.isAnnotation) {
-            logger.info("Overriding not overridden JDK methods which have to be instrumented");
+
             if (this.isInterface) {
+                /*if(LogUtils.LOGGING_ENABLED) {
+                    logger.info("Declaring inherited but not overridden JDK methods which have to be instrumented in {}", this.owner);
+                }*/
                 this.declareMissingJdkMethods();
             } else {
+                /*if(LogUtils.LOGGING_ENABLED) {
+                    logger.info("Overriding inherited but not overridden JDK methods which have to be instrumented in {}", this.owner);
+                }*/
                 this.overrideMissingJdkMethods();
             }
         }
         if (!this.hasClInit && !this.staticFinalFields.isEmpty()) {
-            logger.info("Adding a new static initializer to initialize static final String fields");
+            if(LogUtils.LOGGING_ENABLED) {
+                logger.info("Adding a new static initializer to {} to initialize static final String fields", this.owner);
+            }
             MethodVisitor mv = this.visitMethod(Opcodes.ACC_STATIC, Constants.ClInit, "()V", null, null);
             this.createStaticStringInitializer(mv);
         } else if (this.hasClInit) {
-            logger.info("Replaying static initializer and augmenting it");
+            if(LogUtils.LOGGING_ENABLED) {
+                logger.info("Replaying static initializer and augmenting it for {}", this.owner);
+            }
             MethodVisitor mv = this.visitMethod(Opcodes.ACC_STATIC, Constants.ClInit, "()V", null, null);
             ClassInitializerAugmentingVisitor augmentingVisitor = new ClassInitializerAugmentingVisitor(mv, this.owner, this.staticFinalFields);
             this.recording.replay(augmentingVisitor);
@@ -409,7 +440,7 @@ class ClassTaintingVisitor extends ClassVisitor {
         FunctionCall realFc = call.getImplementation();
         FunctionCall proxied = this.methodProxies.shouldBeProxied(realFc);
         if (!realFc.equals(proxied)) {
-            System.out.println(realFc + " != " + proxied);
+           //System.out.println(realFc + " != " + proxied);
             // Call proxied function instead
             call = new LambdaCall(call.getFunctionalInterface(), FunctionCall.toHandle(proxied), call.getInvokeDescriptor());
             this.generateProxyToInstrumented(mv, call.getImplementation().getName(), proxyDescriptor, proxied.getParsedDescriptor(), Optional.of(call));
@@ -446,10 +477,12 @@ class ClassTaintingVisitor extends ClassVisitor {
         }
 
         int diff = proxyDescriptor.parameterCount() - uninstrumentedDescriptor.parameterCount();
+        String[] proxyParams = proxyDescriptor.getParameters();
+        String[] uninstrumentedParams = uninstrumentedDescriptor.getParameters();
         for (int i = 0; i < uninstrumentedDescriptor.parameterCount(); i++) {
-            String param = proxyDescriptor.getParameters().get(i + diff);
+            String param = proxyParams[i + diff];
             mv.visitVarInsn(loadCodeByType(param), register);
-            if (this.instrumentationHelper.isInstrumented(param) && !param.equals(uninstrumentedDescriptor.getParameters().get(i))) {
+            if (this.instrumentationHelper.isInstrumented(param) && !param.equals(uninstrumentedParams[i])) {
                 Type originalType = Type.getType(param);
                 Type uninstrumentedType = Type.getType(this.instrumentationHelper.uninstrument(param));
                 TaintingUtils.convertTypeToUntainted(originalType, uninstrumentedType, mv);
@@ -503,7 +536,7 @@ class ClassTaintingVisitor extends ClassVisitor {
                 .filter(method -> this.shouldBeInstrumented(method.getDescriptor()))
                 .filter(method -> !Modifier.isStatic(method.getAccess()))
                 .filter(method -> !MethodUtils.isToString(method.getName(), method.getDescriptor()))
-                .collect(Collectors.toList());
+                .toList();
         methods.forEach(this::createJdkDeclaring);
     }
 
@@ -528,13 +561,12 @@ class ClassTaintingVisitor extends ClassVisitor {
     }
 
     private void overrideMissingJdkMethods() {
-        Object comparator;
         List<Method> methods = this.jdkMethods
                 .stream()
                 .filter(method -> !this.containsOverriddenJdkMethod(method))
                 .filter(method -> this.shouldBeInstrumented(method.getDescriptor()))
                 //.filter(method -> !Modifier.isStatic(method.getAccess()))
-                .collect(Collectors.toList());
+                .toList();
         methods.forEach(this::createInstrumentedJdkProxy);
     }
 
@@ -548,12 +580,15 @@ class ClassTaintingVisitor extends ClassVisitor {
                 }
             }
         }
-        logger.info("Creating proxy for inherited, but not overridden JDK method " + m);
+
         Descriptor originalDescriptor = Descriptor.parseDescriptor(m.getDescriptor());
         Descriptor instrumentedDescriptor = this.instrumentationHelper.instrument(originalDescriptor);
 
         if (this.instrumentedMethods.contains(new org.objectweb.asm.commons.Method(m.getName(), instrumentedDescriptor.toDescriptor()))) {
             return;
+        }
+        if(LogUtils.LOGGING_ENABLED) {
+            logger.info("Creating proxy in {} for inherited, but not overridden JDK method: " + m, this.owner);
         }
 
         String[] exceptions = m.getExceptions();
@@ -569,7 +604,9 @@ class ClassTaintingVisitor extends ClassVisitor {
             // If this class extends a JDK class (ie we could not add an instrumented method to the superclass),
             // then create a proxy with instrumented arguments to the non-instrumented super class.
             if(Modifier.isStatic(m.getAccess())) {
-                logger.info("Creating static proxy for inherited, but not overridden JDK method " + m);
+                if(LogUtils.LOGGING_ENABLED) {
+                    logger.info("Creating static proxy in {} for inherited, but not overridden JDK method " + m, this.owner);
+                }
                 this.generateInstrumentedStaticProxyToSuper(mv, m, originalDescriptor, instrumentedDescriptor);
             } else {
                 this.generateInstrumentedProxyToSuper(mv, m, originalDescriptor, instrumentedDescriptor);
@@ -587,7 +624,9 @@ class ClassTaintingVisitor extends ClassVisitor {
             MethodVisitor mv2 = super.visitMethod(modifiers, m.getName(), originalDescriptor.toDescriptor(), signature, exceptions);
             // Create an uninstrumented proxy to the instrumented method in this class
             if(Modifier.isStatic(m.getAccess())) {
-                logger.info("Creating static proxy for inherited, but not overridden JDK method " + m);
+                if(LogUtils.LOGGING_ENABLED) {
+                    logger.info("Creating static proxy for inherited, but not overridden JDK method " + m);
+                }
                 this.generateProxyToStaticInstrumented(mv2, m.getName(), originalDescriptor);
             } else {
                 this.generateProxyToInstrumented(mv2, m.getName(), originalDescriptor, null, Optional.empty());
@@ -604,9 +643,9 @@ class ClassTaintingVisitor extends ClassVisitor {
         int register = 0;
         int diff = originalDescriptor.parameterCount() - instrumentedDescriptor.parameterCount();
         for (int i = 0; i < instrumentedDescriptor.parameterCount(); i++) {
-            String param = originalDescriptor.getParameters().get(i + diff);
+            String param = originalDescriptor.getParameters()[i + diff];
             mv.visitVarInsn(loadCodeByType(param), register);
-            if (this.isDescriptorNameToInstrument(param) && !param.equals(instrumentedDescriptor.getParameters().get(i))) {
+            if (this.isDescriptorNameToInstrument(param) && !param.equals(instrumentedDescriptor.getParameters()[i])) {
                 Type instrumentedType = Type.getType(this.instrumentationHelper.instrumentQN(param));
                 Type uninstrumentedType = Type.getType(param);
                 TaintingUtils.convertTypeToTainted(uninstrumentedType, instrumentedType, mv);
@@ -639,9 +678,9 @@ class ClassTaintingVisitor extends ClassVisitor {
 
         mv.visitCode();
 
-        for (int i = 0; i < instrumentedOriginalDescriptor.getParameters().size(); i++) {
-            String instrOrigParam = instrumentedOriginalDescriptor.getParameters().get(i);
-            String proxyParam = proxyDescriptor.getParameters().get(i);
+        for (int i = 0; i < instrumentedOriginalDescriptor.getParameters().length; i++) {
+            String instrOrigParam = instrumentedOriginalDescriptor.getParameters()[i];
+            String proxyParam = proxyDescriptor.getParameters()[i];
 
             mv.visitVarInsn(loadCodeByType(instrOrigParam), i);
             if (!instrOrigParam.equals(proxyParam)) {
@@ -662,7 +701,7 @@ class ClassTaintingVisitor extends ClassVisitor {
         int idx = 1;
         // Load Parameters, but do not convert them in this case.Tr
         for (int i = 0; i < instrumentedDescriptor.parameterCount(); i++) {
-            String param = instrumentedDescriptor.getParameters().get(i);
+            String param = instrumentedDescriptor.getParameters()[i];
             // Creating new Object if necessary and duplicating it for initialization
             mv.visitVarInsn(loadCodeByType(param), idx);
             idx += Type.getType(param).getSize();
@@ -679,7 +718,7 @@ class ClassTaintingVisitor extends ClassVisitor {
         mv.visitCode();
         int idx = 0;
         for (int i = 0; i < origDescriptor.parameterCount(); i++) {
-            String param = origDescriptor.getParameters().get(i);
+            String param = origDescriptor.getParameters()[i];
             // Creating new Object if necessary and duplicating it for initialization
             if (this.isDescriptorNameToInstrument(param)) {
                 mv.visitVarInsn(loadCodeByType(param), idx);
@@ -750,7 +789,7 @@ class ClassTaintingVisitor extends ClassVisitor {
         mv.visitVarInsn(Opcodes.ALOAD, 0);
         int idx = 1;
         for (int i = 0; i < origDescriptor.parameterCount(); i++) {
-            String param = origDescriptor.getParameters().get(i);
+            String param = origDescriptor.getParameters()[i];
             // Creating new Object if necessary and duplicating it for initialization
             if (this.isDescriptorNameToInstrument(param)) {
                 mv.visitVarInsn(loadCodeByType(param), idx);
@@ -895,7 +934,7 @@ class ClassTaintingVisitor extends ClassVisitor {
     }
 
     private boolean implementsInvocationHandler() {
-        return Arrays.asList(this.interfaces).contains("java/lang/reflect/InvocationHandler");
+        return Utils.contains(this.interfaces, "java/lang/reflect/InvocationHandler");
     }
 
     private boolean overridesJdkSuperMethod(Method m) {
