@@ -6,7 +6,6 @@ import com.sap.fontus.asm.FunctionCall;
 import com.sap.fontus.asm.resolver.IClassResolver;
 import com.sap.fontus.utils.ClassTraverser;
 import com.sap.fontus.asm.resolver.ClassResolverFactory;
-import com.sap.fontus.utils.lookups.AnnotationLookup;
 import com.sap.fontus.utils.lookups.CombinedExcludedLookup;
 import org.objectweb.asm.Handle;
 import org.objectweb.asm.Opcodes;
@@ -17,7 +16,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class LambdaCall implements Serializable {
     /**
@@ -74,7 +72,7 @@ public class LambdaCall implements Serializable {
                 .filter((m) -> (m.getAccess() & Opcodes.ACC_ABSTRACT) != 0)
                 .filter((m) -> !Constants.ObjectQN.equals(m.getOwner()))
                 .filter((m) -> objMethods.stream().noneMatch(om -> m.getName().equals(om.getName()) && m.getDescriptor().equals(om.getDescriptor())))
-                .collect(Collectors.toList());
+                .toList();
 
         int enclosedCount;
         if (methods.size() > 1) {
@@ -96,7 +94,7 @@ public class LambdaCall implements Serializable {
 
         // Type.getDescriptor will give a class name back like Ljava/lang/Integer; so need to convert it
         // Also check whether the class is an annotation, which we also do not instrument, and therefore need to proxy
-        String descriptor = Descriptor.removeLeadingLandTrailingSemiColon(getConcreteOrOwnerImplementation().getDescriptor());
+        String descriptor = this.getConcreteOrOwnerImplementation().getInternalName();
         if (lookup.isPackageExcludedOrJdkOrAnnotation(descriptor)) {
             return this.generateProxyToJdkDescriptor(instrumentationHelper);
         } else {
@@ -111,15 +109,15 @@ public class LambdaCall implements Serializable {
         List<String> proxyParameters = new ArrayList<>(implementationDesc.parameterCount());
 
         if (this.isInstanceCall()) {
-            String concreteOwnerOrImplementation = getConcreteOrOwnerImplementation().getDescriptor();
+            String concreteOwnerOrImplementation = this.getConcreteOrOwnerImplementation().getDescriptor();
             String instrumentedConcreteOwnerOrImplementation = instrumentationHelper.instrument(concreteOwnerOrImplementation);
             proxyParameters.add(instrumentedConcreteOwnerOrImplementation);
         }
+        String[] implementationParameters = implementationDesc.getParameters();
+        for (String implementationParameter : implementationParameters) {
+            Type implementationParam = Type.getType(implementationParameter);
 
-        for (int i = 0; i < instrumentedImplementationDesc.parameterCount(); i++) {
-            Type implementationParam = Type.getType(implementationDesc.getParameters().get(i));
-
-            if (instrumentationHelper.canHandleType(implementationParam.getDescriptor())) {
+            if (instrumentationHelper.canHandleType(implementationParam)) {
                 String instrumented = instrumentationHelper.instrumentQN(implementationParam.getDescriptor());
                 proxyParameters.add(instrumented);
             } else {
@@ -152,15 +150,15 @@ public class LambdaCall implements Serializable {
         List<String> mergedParameters = new ArrayList<>(implementationDesc.parameterCount());
 
         if (this.isInstanceCall()) {
-            String concreteOwnerOrImplementation = getConcreteOrOwnerImplementation().getDescriptor();
+            String concreteOwnerOrImplementation = this.getConcreteOrOwnerImplementation().getDescriptor();
             String instrumentedConcreteOwnerOrImplementation = instrumentationHelper.instrument(concreteOwnerOrImplementation);
             mergedParameters.add(instrumentedConcreteOwnerOrImplementation);
         }
         for (int i = 0; i < enclosedCount; i++) {
-            mergedParameters.add(instrumentedImplementationDesc.getParameters().get(i));
+            mergedParameters.add(instrumentedImplementationDesc.getParameters()[i]);
         }
         for (int i = Math.max(enclosedCount, 0); i < instrumentedImplementationDesc.parameterCount(); i++) {
-            Type implementationParam = Type.getType(implementationDesc.getParameters().get(i));
+            Type implementationParam = Type.getType(implementationDesc.getParameters()[i]);
 
             if (instrumentationHelper.isInstrumented(implementationParam.getDescriptor())) {
                 String uninstrumented = instrumentationHelper.uninstrument(implementationParam.getDescriptor());
